[package]
name = "pxservrs"
version = "0.0.1"
edition = "2021"
authors = ["mustafa 'pxsty' kok <pxsty@pxserv.net>"]
license = "MIT"
description = "PxServ Library for Rust"
documentation = "https://docs.pxserv.net/"
homepage = "https://pxserv.net"
repository = "https://github.com/pxserv/pxservrs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
