[package]
name = "pxserv"
version = "1.1.1"
description = "PxServ Library for Rust"
edition = "2021"
authors = ["mustafa 'pxsty' kok <pxsty@pxserv.net>"]
license = "MIT"
documentation = "https://docs.pxserv.net/en/rust-library"
homepage = "https://pxserv.net"
repository = "https://github.com/pxserv/pxserv.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
